<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/imageCaptureMethodView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/takePhotoCaptureView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_menu_camera" />

        <TextView
            android:id="@+id/txtTakePhotoCapture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/take_photo_capture"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/takeVideoCaptureView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_menu_slideshow" />

        <TextView
            android:id="@+id/txtTakePhotoCapture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/take_video_capture"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/takePhotoFromFileView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/txtTakePhotoFromFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/take_photo_from_file"
            android:textSize="22sp" />

    </LinearLayout>
</LinearLayout>